--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <button type="submit">Audio</button>
                     </a>
                     <a href="#">
-                        <button type="submit">Vedio</button>
+                        <button type="submit">Video</button>
                     </a>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                 <a href="https://whatsapp.com/channel/0029VaY0O7M8V0tlMYCDOL3K">
                     <i class='bx bxl-whatsapp'></i>
                 </a>
-                <a href="#">
+                <a href="https://youtube.com/@user-ex7lh5ze6i?si=pgDl5ePIbERSjGwr">
                     <i class='bx bxl-youtube' ></i>
                 </a>
                 <a href="#">
